@@ -1,5 +1,13 @@
 2016-09-20  Lukas Kluft  <lukas.kluft@gmail.com>
 
+	* typhon/physics/units/thermodynamics.py:
+
+	Added function to calculate Rayleigh-Jeans approximation.
+
+	* typhon/physics/__init__.py: PEP8 fixes.
+
+2016-09-20  Lukas Kluft  <lukas.kluft@gmail.com>
+
 	* typhon/plots/__init__.py:
 
 	Added function to return all available mplstyles.
